<resources>
    <string name="app_name"></string>
    <string name="title_activity_maps">Map</string>
    <string name="email">E-mail</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_cuenta">No tienes una cuenta !!</string>
    <string name="registro">Registro</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salir">Salir</string>
    <string name="nombres">Nombres</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="tienes_cuenta">Ya tienes una cuenta !!</string>
    <string name="IngresarCorreo">Ingresar Correo Electronico :</string>
    <string name="Enviar">Recuperar Password</string>
    <string name="pregunta">Este el el fragment de preguntas</string>
    <string name="mis_preguntas">Este es el fragment de mis preguntas</string>
    <string name="tab_text_1">PREGUNTAS</string>
    <string name="tab_text_2">MIS PREGUNTAS</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="nombre_usuario">Email</string>
    <string name="password">Password</string>
    <string name="registrar">Registrar Nuevo Usuario</string>
    <string name="ingreso">Click en Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="usuarioExistente">ya tiene usuario</string>
    <string name="registroUsuario">Usuario Registrado con Exito.</string>
    <string name="ErrorRegistroCoche">Ingrese todos los datos.</string>
    <string name="guarda_usuario">Guardar Registro</string>
    <string name="Marca">Marca</string>
    <string name="Dueno">Dueño</string>
    <string name="Puertas">Puertas</string>
    <string name="Ruedas">Ruedas</string>
    <string name="RegistroCoche">Registro Guardado</string>
    <string name="title_activity_lista_tareas">ListaTareasActivity</string>
    <string name="facebook_app_id">167909540429700</string>
    <string name="fb_login_protocol_scheme">fb167909540429700</string>
    <string name="cancel_login">Login Cancelado</string>
    <string name="error_login">Ocurrio un error :</string>
    <string name="escribir_tarea">Que tienes que hacer ?</string>
    <string name="title_activity_prueba">pruebaActivity</string>
    <string name="signin">Informacion</string>
    <string name="cancel">Cancelar</string>
    <string name="RegistrodeTarea">Registro de Tarea</string>
    <string name="login">Login</string>
    <string name="fecha">Fecha</string>
    <string name="registrar_tarea">Registrar Tarea</string>
    <string name="Calendario">Calendario</string>
    <string name="CamposVaciosTarea">Ingrese todos los campos</string>
    <string name="PreguntaRegistrada">Pregunta Registrada con Exito</string>
    <string name="preguntas">Pregunta</string>
    <string name="ok">Aceptar</string>
    <string name="dialog_title">¿Pregunta?</string>
    <string name="dialog_message">Datos Obligatorios</string>
    <string name="Agregar">Agregar</string>
    <string name="ingresoFacebook">Ingreso con Facebook</string>
    <string name="categoria">Categoria</string>


    <!-- Goku -->
    <string name="goku_nombre">Goku</string>
    <string name="goku_descripcion_corta">Son Gokū es el protagonista del manga y anime Dragon Ball creado por Akira Toriyama.</string>
    <string name="goku_descripcion_Larga">Son Gokū es el protagonista del manga y anime Dragon Ball creado por Akira Toriyama,
        Al comienzo de la historia, Gokū aparece como un joven artista marcial con cola de mono y fuerza sobrehumana,
        más adelante se revela que es un extraterrestre de la raza ficticia saiyajin y que su nombre original es Kakarotto</string>

    <!-- Gohan -->
    <string name="gohan_nombre">Gohan</string>
    <string name="gohan_descripcion_corta">Son Gohan es un personaje del manga y anime Dragon Ball creado por Akira Toriyama.</string>
    <string name="gohan_descripcion_Larga">Son Gohan es un personaje del manga y anime Dragon Ball creado por Akira Toriyama.
    Es el primer hijo de Son Gokū y Chi-Chi, hermano mayor de Son Goten, esposo de Videl y padre de Pan.</string>

    <!-- Goten -->
    <string name="goten_nombre">Goten</string>
    <string name="goten_descripcion_corta">Goten es un personaje ficticio de la serie de manga y anime Dragon Ball. </string>
    <string name="goten_descripcion_Larga">Goten es un personaje ficticio de la serie de manga y anime Dragon Ball.
        Segundo hijo del protagonista, Goku, y Chichi/Milk. Se transformó en Super Saiyajin desde pequeño y hace la técnica de la fusión con Trunks.</string>

    <!-- Krilin -->
    <string name="krilin_nombre">Krilin</string>
    <string name="krilin_descripcion_corta">Krilin es un personaje de la serie de manga y anime Dragon Ball.</string>
    <string name="krilin_descripcion_Larga">Krilin es un personaje de la serie de manga y anime Dragon Ball.
     Es el primer rival en artes marciales de Son Gokū aunque luego se convierte en su mejor amigo. Mide 1,58 cm y pesa 55 kg.</string>

    <!-- Picoro -->
    <string name="picoro_nombre">Picoro</string>
    <string name="picoro_descripcion_corta">Picoro o Piccolo es un personaje de ficción de la serie de manga y anime Dragon Ball.</string>
    <string name="picoro_descripcion_Larga">Picoro o Piccolo es un personaje de ficción de la serie de manga y anime Dragon Ball.
    Su padre, Piccolo Daimaō, surgió tras separarse de Kamisama. Así, si uno de los dos muere, el otro también. Odia a su alter ego,
        aunque es mucho más fuerte y menos malvado que su padre </string>

    <!-- Vegueta -->
    <string name="vegueta_nombre">Vegueta</string>
    <string name="vegueta_descripcion_corta">Vegeta es un personaje ficticio perteneciente a la raza llamada saiyajin, del manga y anime Dragon Ball.</string>
    <string name="vegueta_descripcion_Larga">Vegeta es un personaje ficticio perteneciente a la raza llamada saiyajin, del manga y anime Dragon Ball.
    Su nombre proviene de su padre, el Rey Vegeta, así como de su planeta de origen, el cual recibió su nombre tras su conquista por parte de los saiyajin. </string>

    <!-- Trunks -->
    <string name="trunks_nombre">Trunks</string>
    <string name="trunks_descripcion_corta">Trunks es un personaje de ficción de la serie de manga y anime Dragon Ball de Akira Toriyama. </string>
    <string name="trunks_descripcion_Larga">Trunks es un personaje de ficción de la serie de manga y anime Dragon Ball de Akira Toriyama.
        Hizo su primera aparición en el capitulo #331 "El joven misterioso", publicado en la revista Shūkan Shōnen Jump el 15 de julio de 1991.</string>
    <string name="Respuesta">Respuesta :</string>
    <string name="IngresarRespuesta">Ingrese una respuesta ....</string>
    <string name="Nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="estado">Estado</string>


</resources>
