<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.crodriguez.proyectofinalquestions.vista.fragmentos.RegistroFragment">

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@color/blanco">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.4"
            android:src="@mipmap/ic_add_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_margin="15px"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres"
                    android:drawableLeft="@drawable/ic_icon_user"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email_claro"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCrearCuenta"
                style="@style/BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:text="@string/crear_cuenta" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/tienes_cuenta"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
